# dilithium

./: Cargo.toml
pkg/: package.json  pqc_dilithium.d.ts  pqc_dilithium_bg.js  pqc_dilithium_bg.wasm  pqc_dilithium_bg.wasm.d.ts
src/: api.rs  fips202.rs  lib.rs  packing.rs  params.rs  poly.rs  polyvec.rs  sign.rs  symmetric.rs  wasm.rs
tests/: integration.rs
